# 078-llm-compliance-check

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: basic_compliance.rs  compliance_checker.py  crypto_compliance.rs  stock_compliance.rs
src/: error.rs  lib.rs
src/compliance/: mod.rs
src/regulations/: mod.rs
src/reports/: mod.rs
